@@ -1,63 +1,72 @@
 package exercise;
 
+// BEGIN
 import java.util.Map;
-import java.util.HashMap;
-import java.nio.file.Path;
 import java.nio.file.Files;
-import java.io.BufferedWriter;
-import java.io.IOException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.core.type.TypeReference;
 
 public class FileKV implements KeyValueStorage {
     private final Path filePath;
-    private final Map<String, String> dataMap;
+    private Map<String, String> data;
 
-    public FileKV(String fileName, Map<String, String> initialData) {
-        this.filePath = Path.of(fileName);
-        this.dataMap = initialData;
+    public FileKV(String filePath, Map<String, String> initialData) {
+        this.filePath = Paths.get(filePath);
+        this.data = initialData;
+        if (!Files.exists(this.filePath)) {
+            try {
+                Files.createFile(this.filePath);
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        } else {
+            loadFromFile();
+        }
     }
 
     @Override
     public void set(String key, String value) {
-        dataMap.put(key, value);
+        data.put(key, value);
         saveToFile();
     }
 
     @Override
     public void unset(String key) {
-        dataMap.remove(key);
+        data.remove(key);
         saveToFile();
     }
 
     @Override
     public String get(String key, String defaultValue) {
-        return dataMap.getOrDefault(key, defaultValue);
-    }
-
-    @Override
-    public void clear() {
-        dataMap.clear();
-        saveToFile();
+        return data.getOrDefault(key, defaultValue);
     }
 
     @Override
     public Map<String, String> toMap() {
-        return new HashMap<>(dataMap);
+        return data;
     }
 
-    private void saveToFile() {
-        try (BufferedWriter writer = Files.newBufferedWriter(filePath)) {
-            for (Map.Entry<String, String> entry : dataMap.entrySet()) {
-                writer.write(entry.getKey() + "=" + entry.getValue());
-                writer.newLine();
-            }
-        } catch (IOException e) {
+    private void loadFromFile() {
+        try {
+            String content = Files.readString(filePath, StandardCharsets.UTF_8);
+            ObjectMapper mapper = new ObjectMapper();
+            data = mapper.readValue(content, new TypeReference<Map<String, String>>() {});
+        } catch (Exception e) {
             e.printStackTrace();
-            // Handle exception appropriately
         }
     }
 
-    @Override
-    public void setAll(Map<String, String> map) {
-        // Реализация метода
+    private void saveToFile() {
+        try {
+            ObjectMapper mapper = new ObjectMapper();
+            String content = mapper.writeValueAsString(data);
+            Files.writeString(filePath, content, StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 }
+// END
